# trash_scheme

./: .gitignore  CMakeLists.txt  README.md  init.trash  printer.py
gc/: CMakeLists.txt  gc.cpp  gc.h  getconst.h
scheme/: CMakeLists.txt  main.cpp  readme.md  review.md  scheme.cpp  scheme.h  spec.md
scheme-internals/: CMakeLists.txt  builtinobj.cpp  builtinobj.h  builtins.cpp  builtins.h  cell.cpp  cell.h  function.cpp  function.h  interfaces.h  lisperrors.cpp  lisperrors.h  lispstring.cpp  lispstring.h  number.cpp  number.h  objects.h  scope.cpp  scope.h  specialform.cpp  specialform.h  storage.h  symbol.cpp  symbol.h  util.cpp  util.h
scheme-parser/: CMakeLists.txt  README.md  create.h  gc.cpp  gc.h  parser.cpp  parser.h  parser_test.cpp
scheme-tokenizer/: CMakeLists.txt  README.md  tokenizer.h  tokenizer_test.cpp
scheme/test/: CMakeLists.txt  scheme_test.h  test_boolean.cpp  test_control_flow.cpp  test_eval.cpp  test_integer.cpp  test_lambda.cpp  test_list.cpp  test_symbol.cpp
